--- a/src/client/app/dashboard/item/item.component.html
+++ b/src/client/app/dashboard/item/item.component.html
@@ -150,7 +150,7 @@
                     </div>
                     <div align="center" class="form-group">
                             <br>
-                            <label><b>Purchase Count</b></label>
+                            <label><b>Picture</b></label>
                             <input #pic type="file" id="picture" (change)="onChange($event)" name="picture" required >
                             <br><br>
                     </div>
