--- a/src/client/app/dashboard/item/item.component.html
+++ b/src/client/app/dashboard/item/item.component.html
@@ -198,10 +198,12 @@
                     <div align="left">
                         <label><b>Item Category</b></label><br>
                         <select [ngModelOptions]="{standalone: true}" [(ngModel)]="category">
-                            <option value="Food">Food</option>
-                            <option value="Drinks">Drinks</option>
+                            <option value="Dry Goods">Dry Goods</option>
+                            <option value="Non-chilled Beverages">Non-chilled Beverages</option>
                             <option value="Condiments">Condiments</option>
-                            <option value="Toiletries">Toiletries</option>        
+                            <option value="Dairy Products">Dairy Products</option>  
+                            <option value="Toiletries">Toiletries</option>  
+                             <option value="Miscellaneous">Miscellaneous</option>      
                         </select>
                     </div>
                     <div align="left" class="form-group">
