--- a/src/client/app/dashboard/itemstatisticsyear/itemstatisticsyear.component.html
+++ b/src/client/app/dashboard/itemstatisticsyear/itemstatisticsyear.component.html
@@ -1,4 +1,5 @@
 <button (click)="export()"><i class="fa fa-print"></i>Export</button>
+<button (click)="resetYear()"><i class="fa fa-repeat"></i>Reset</button>
 <h1 align="center">Top 20 Most Bought Items(Yearly)</h1>
 <div class="table well">
     <table class="table table-scroll">
