--- a/src/client/app/dashboard/home/home.component.html
+++ b/src/client/app/dashboard/home/home.component.html
@@ -58,6 +58,7 @@
 }
     </style>
 
+<button (click)="test()">newbutton</button>
 <h1 align="center">Orders</h1>
 <div class="table well">
     <table class="table table-scroll">
