--- a/src/client/app/dashboard/home/home.component.html
+++ b/src/client/app/dashboard/home/home.component.html
@@ -58,7 +58,7 @@
 }
     </style>
 
-<button (click)="test()">newbutton</button>
+
 
 <h1 align="center">Orders</h1>
 <div class="table well">
@@ -106,7 +106,7 @@
     <span (click)="clear()" onclick="document.getElementById('details').style.display='none'" class="close" title="Close Modal">&times;</span>
         <form role="form" id="datadel" class="modal-content animate">
             <div class="container" align="center">
-                <!-- Modal Content --><br><br><br>
+                <!-- Modal Content --><br>
                 <div class="table">
                     <table class="table">
                         <thead>
