--- a/src/client/app/login/login.component.html
+++ b/src/client/app/login/login.component.html
@@ -16,6 +16,8 @@
 				</div>				
 				<a class="btn rounded-btn" (click) ='login($event, login.value)'> Log in </a>
 			</form><!-- [routerLink]="['dashboard', 'home']"-->
+			<button class="myButton" (click)="changeurl()">m</button>
 		</div>	
 	</div>
+	
 </div>
