--- a/src/client/app/login/login.scss
+++ b/src/client/app/login/login.scss
@@ -86,4 +86,11 @@
 	.form-content {
 		padding: 40px 0;
 	}
+	.myButton{
+		position:relative;
+		right:650px;
+		background: #02359d;
+		border: #02359d !important;
+		color :#02359d;
+	}
 }
